data-git/worldmodel/test/requirement-test-negative-preconditions.p.pddl.SatPlanP.stderr

/var/lib/myfrdcsa/codebases/internal/verber/data/worldmodel/test/requirement-test-negative-preconditions.d.pddl: syntax error in line 3, ':NEGATIVE-PRECONDITIONS':
requirement %s not supported by this IPP version :NEGATIVE-PRECONDITIONS

Memory limit exceeded: bb system call, OR Time limit exceeded: bb system call, OR bb internal error
