data-git/worldmodel/test/requirement-test-negative-preconditions.p.pddl
(define
 (problem REQUIREMENT-TEST-NEGATIVE-PRECONDITIONS)
 (:domain REQUIREMENT-TEST-NEGATIVE-PRECONDITIONS)
 (:objects obj2 obj1 - type1)
 (:init
  (pred1 obj1))
 (:goal
  (and
   (pred1 obj2))))